@@ -6,6 +6,7 @@ depends:
     account_cog
     company_cog
     account_invoice
+    report_engine
 xml:
     icons.xml
     invoice.xml
