@@ -1,3 +1,4 @@
+* Make invoice printable
 Version 1.4 - 2015-05-29
 * New icons based on state for invoice
 
